--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1"
   }
 }
