--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ecommerce-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://wasil47.github.io/eCommerce",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
